# fp-homework

hw0/: hw0.cabal
hw0/src/: Lib.hs
hw1/: hw1.cabal
hw1/src/: Base.hs  Foldable.hs  Lib.hs  Monoids.hs
hw2/: hw2.cabal
hw2/src/: Block1.hs  Block2.hs  Block2Task3.hs  Block2Task3Vol1.hs  Block2Task3Vol2.hs  Block3.hs
hw2/test/: EvalSpec.hs  ParserSpec.hs  StringSumSpec.hs
hw3/: README.md  hw3.cabal
hw3/app/: Main.hs
hw3/resources/task1/: aLotOfEmptyLines.sh  aLotOfNewLines.sh  differentAssign.sh  singleQuote.sh  specialSymbols.sh  varNames.sh
hw3/resources/task2/: basic1.sh  boundaryCase.sh  dirPaths.sh
hw3/resources/task3/: basic1.sh  delimetrCheck.sh  resolveRead.sh  simple.sh
hw3/src/: BaseParser.hs  Interpretator.hs  ShParser.hs
hw3/test/: InterpretatorTestSpec.hs  ParserBlock1Spec.hs  ParserBlock2Spec.hs  ParserBlock3Spec.hs
hw4/: hw4.cabal
hw4/app/: Main.hs
hw4/bench/: GaussBench.hs  GeometryBench.hs  HashTableBench.hs  Main.hs  MatrixBench.hs
hw4/src/: Gauss.hs  GaussUtils.hs  Geometry.hs  GeometryUtils.hs  HashTable.hs  Matrix.hs  MatrixUtils.hs
hw4/test/: GaussSpec.hs  GeometrySpec.hs  HashTableSpec.hs  MatrixSpec.hs
hw5/: hw5.cabal
hw5/src/: FSLens.hs  Lens.hs
hw5/test/: FSLensSpec.hs  LensSpec.hs
