name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Aleksandr Volkov
maintainer:          alexander.volkow@gmail.com
copyright:           2019 Aleksandr Volkov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1, Block2, Block2Task3, Block2Task3Vol1, Block2Task3Vol2, Block3
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, mtl
  default-language:    Haskell2010
